Add wip verification controller + views

--- a/VseVerification.csproj
+++ b/VseVerification.csproj
@@ -83,4 +83,9 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\LICENSE.txt" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Pages" />
+      <Folder Include="Views" />
+    </ItemGroup>
+
 </Project>
