Add api key authentication scheme

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "Default": "Host=localhost;Username=verification;Password=verification;Database=verification"
-  }
+  },
+  "ApiKey": "development-api-key"
 }
