Configure verification properties on application startup

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Verification": {
+    "BlockedRoles": [
+      "275337bd-893c-4ae4-8073-ccd73fa3b156"
+    ]
+  }
 }
